<resources>
    <string name="app_name">WeatherWise</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="location_settings">Location Settings</string>
    <string name="use_gps_location">Use GPS Location</string>
    <string name="select_location_manually">Select Location Manually</string>
    <string name="select_on_map">Select on Map</string>
    <string name="units_settings">Units Settings</string>
    <string name="temperature_unit">Temperature Unit</string>
    <string name="celsius">Celsius (°C)</string>
    <string name="fahrenheit">Fahrenheit (°F)</string>
    <string name="kelvin">Kelvin (K)</string>
    <string name="wind_speed_unit">Wind Speed Unit</string>
    <string name="meters_sec">Meters/sec</string>
    <string name="miles_hour">Miles/hour</string>
    <string name="language_settings">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="save_settings">Save Settings</string>
    <string name="notifications_settings">Notifications</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="favorites">Favorites</string>
    <string name="no_favorites">You don\'t have any favorites yet</string>
    <string name="no_favorites_description">No favorites</string>
    <string name="add_first_favorite">Add Your First Favorite</string>
    <string name="add_favorite_description">Add favorite</string>
    <string name="remove_favorite">Remove favorite</string>
    <string name="weather_alerts">Weather Alerts</string>
    <string name="weather_alerts_description">Set alerts to be notified about specific weather conditions in your area.</string>
    <string name="active_alerts">Active Alerts</string>
    <string name="no_active_alerts">No active weather alerts</string>
    <string name="no_alerts_description">No alerts</string>
    <string name="add_first_alert">Add Your First Alert</string>
    <string name="add_alert_description">Add alert</string>
    <string name="turn_off">Turn Off</string>
    <string name="turn_on">Turn On</string>
    <string name="alert_type">Alert Type</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="notification_type">Notification Type</string>
    <string name="silent_notification">Silent Notification</string>
    <string name="sound_notification">Sound Notification</string>
    <string name="alarm_sound">Alarm Sound</string>
    <string name="custom_sound">Custom Sound</string>

    <string-array name="alert_types">
        <item>Rain</item>
        <item>Storm</item>
        <item>Snow</item>
        <item>Extreme Heat</item>
        <item>Extreme Cold</item>
    </string-array>

    <string name="notification_channel_name">Weather Notifications</string>
    <string name="notification_channel_description">Notifications for weather updates</string>
    <string name="add_weather_alert">Add Weather Alert</string>
    <string name="add_weather_alert_description">Dialog to add a new weather alert</string>
    <string name="alert_type_icon_description">Alert type selection icon</string>
    <string name="alert_type_input_description">Select the type of weather alert</string>
    <string name="start_time_icon_description">Start time picker icon</string>
    <string name="start_time_input_description">Select the start time for the alert</string>
    <string name="end_time_icon_description">End time picker icon</string>
    <string name="end_time_input_description">Select the end time for the alert</string>
    <string name="notification_type_description">Select the notification type</string>
    <string name="silent_notification_description">Silent notification option</string>
    <string name="sound_notification_description">Sound notification option</string>
    <string name="alarm_sound_description">Alarm sound notification option</string>
    <string name="select_sound_description">Select a custom sound</string>
    <string name="custom_sound_input_description">Selected custom sound for the alert</string>

    <string name="city_name">Your long address here</string>
    <string name="hourly_forecast">Hourly Forecast</string>
    <string name="weekly_forecast">5-Day Forecast</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="cloud">Cloud</string>
    <string name="uv_index">UV Index</string>
    <string name="visibility">Visibility</string>
    <string name="background_description">Background</string>
    <string name="menu_description">Menu</string>
    <string name="weather_animation_description">Weather Animation</string>
    <string name="pressure_icon_description">Pressure Icon</string>
    <string name="humidity_icon_description">Humidity Icon</string>
    <string name="wind_icon_description">Wind Icon</string>
    <string name="cloud_icon_description">Cloud Icon</string>
    <string name="uv_icon_description">UV Icon</string>
    <string name="visibility_icon_description">Visibility Icon</string>
    <string name="back_description">Back</string>
    <string name="search_location">Search location</string>
    <string name="enter_location_to_search">Enter a location to search</string>
    <string name="back">Back</string>
    <string name="save_location">Save Location</string>
    <string name="dismiss">Dismiss</string>
    <string name="dismiss_description">Dismiss alert</string>


    <string name="alert_type_description">Select alert type</string>
    <string name="start_time_description">Select start time</string>
    <string name="end_time_description">Select end time</string>
    <string name="custom_sound_description">Select custom sound</string>
    <string name="undo">Undo</string>
    <string name="undo_description">Undo action</string>
    <string name="delete">Delete</string>
    <string name="delete_description">Delete action</string>

    <string name="hourly">Hourly</string>
    <string name="weekly">Weekly</string>

    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="favorite_details">Favorite Details</string>
    <string name="navigation_drawer_description">Open navigation drawer</string>
    <string name="alarms">Alarms</string>
    <string name="weather_icon_description">Weather condition icon</string>
    <string name="high_low_temperature_format">H:%1$d° L:%2$d°</string>


    <string name="remove_favorite_description">Remove favorite</string>

    <string name="alarm_instructions">Long-press notification to open app</string>


    <string name="long_press_hint">Long-press to open app</string>

    <string name="rain_alert">Rain Alert</string>
    <string name="active_until_8am">Active until 8:00 AM</string>
    <string name="notify_rain_detected">Notify when rain is detected in your area</string>
    <string name="delete_alert">Delete alert</string>


</resources>